methods.picture.PictureMono3.scala.code
override def run() {
  for(j <-0 to 2){
    LigneMotif()
  	gauche()
  	avance(7)
    droite()
  }
  
}

def carrémotif() {
  for(i <-0 to 3){
  avance(2)
  FaireMotif()
  avance(2)
  gauche()
	}
}

def LigneMotif(){
  for(i<- 0 to 10){
  carrémotif()
  avance(7)
  }
}

def Marquer(){
  baisseBrosse()
  leveBrosse()
}
def FaireMotif(){
 	Marquer()
  avance()
  gauche()
  avance()
  Marquer()
  droite()
  avance()
  droite()
  avance()
  Marquer()
  gauche()
}}